[gd_scene load_steps=7 format=2]

[ext_resource path="res://scenes/GUI.tscn" type="PackedScene" id=1]
[ext_resource path="res://scenes/WorldBackground.tscn" type="PackedScene" id=2]
[ext_resource path="res://scenes/City.tscn" type="PackedScene" id=3]
[ext_resource path="res://Main_Scene.gd" type="Script" id=4]
[ext_resource path="res://scenes/Disaster.tscn" type="PackedScene" id=5]
[ext_resource path="res://scenes/Disaster.gd" type="Script" id=6]

[node name="World" type="Node"]
script = ExtResource( 4 )

[node name="WorldBackground" parent="." instance=ExtResource( 2 )]
position = Vector2( 1.39856, -0.245293 )

[node name="City" parent="." instance=ExtResource( 3 )]
position = Vector2( 640, 512 )

[node name="WorldUI" parent="." instance=ExtResource( 1 )]

[node name="Disaster" parent="." instance=ExtResource( 5 )]
position = Vector2( 648, 456 )
script = ExtResource( 6 )
[connection signal="disaster_died" from="." to="Disaster" method="_on_World_disaster_died"]
[connection signal="fire_disaster" from="." to="City" method="_on_World_fire_disaster"]
[connection signal="turn_passed" from="." to="City" method="_on_World_turn_passed"]
[connection signal="has_died" from="City" to="." method="_on_City_has_died"]
[connection signal="pressed" from="WorldUI/ActionMenu/VSplitContainer/VBoxContainer/UpgradeCityButton" to="City" method="_on_UpgradeCityButton_pressed"]
[connection signal="pressed" from="WorldUI/StartGameButton" to="." method="_on_StartGameButton_pressed"]

[editable path="WorldUI"]

[editable path="WorldUI/ActionMenu"]
